--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 fastapi==0.100.0
 hypercorn==0.14.4
 reportlab==4.0.4
+httpx==0.25.0
+supabase==2.3.4
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
