--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.100.0
-hypercorn==0.14.4
+fastapi==0.104.1
+uvicorn==0.24.0
 reportlab==4.0.4
-httpx==0.25.0
+httpx==0.25.2
 supabase==2.3.4
 python-dotenv==1.0.0
 python-jose[cryptography]==3.3.0
-cryptography==41.0.7
+cryptography==41.0.8
+email-validator==2.1.0
