--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi==0.100.0",
-    "httpx==0.25.0",
-    "hypercorn==0.14.4",
-    "python-dotenv==1.0.0",
-    "python-jose[cryptography]==3.3.0",
+    "fastapi==0.104.1",
+    "uvicorn==0.24.0",
     "reportlab==4.0.4",
+    "httpx==0.25.2",
     "supabase==2.3.4",
+    "python-dotenv==1.0.0",
+    "email-validator==2.1.0",
 ]
