--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "supabase==2.9.0",
     "python-dotenv==1.0.0",
     "email-validator==2.1.0",
+    "cryptography==41.0.7",
 ]
