--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ supabase==2.9.0
 python-dotenv==1.0.0
 email-validator==2.1.0
 cryptography==41.0.7
-playwright==1.41.0
+# Upgrade Playwright to a version compatible with Ubuntu 24.04 (noble)
+# Older versions try to install libasound2 (renamed to libasound2t64 on noble)
+playwright==1.46.0
